- Don't unconditionally add wxCAPTION style to wxMiniFrame.
- Fixed crash in file and dir pickers for GTK+ < 2.6 if compiled
  with GTK+ >= 2.6.
- Generate wxEVT_COMMAND_LIST_END_LABEL_EDIT event even if label didn't change.
- Replaced g_free with g_border_free to fix crash with newer GTK+.
- Fixed crash in settings when using tooltips->tip_window with GTK+ 2.11.6.

wxMac:

- Fixed ability of non-native/installed toolbars to have controls,
  in native toolbar compilation mode.
- wxSTAY_ON_TOP mini frame windows no longer get hidden on deactivate.
- Always have a transparent sizer grip now.
- Avoid a grow box overlapping a scrollbar.
- Implemented wxALWAYS_SHOW_SB.
- Restricted mouse wheel support to y axis.
- Mouse button handling improvements.

wxMotif:

- Fix crash when using wxStaticBox with empty label


2.8.4
-----

All:

- Fix bug in wxFileConfig when recreating a group (Steven Van Ingelgem).
- Fix wxStringOutputStream::Write() in Unicode build when the argument
  overlaps UTF-8 characters boundary.
- Account for lines without newline at the end in wxExecute().
- Added wxString::char_str(), wchar_str(), From8BitData(), To8BitData(),
  FromUTF8(), ToUTF8() and utf8_str() methods for forward compatiblity
  with wxWidgets 3.

All (Unix):

- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse).

All (GUI):

- Allow status bar children in XRC (Edmunt Pienkowski).
- Fix memory leak in wxWizard when not using sizers for the page layout.
- Added wxListCtrl::SetItemPtrData().
- wxHTML: Apply table background colour between the cells too (Michael Hieke).

wxMSW:

- Corrected wxStaticBox label appearance when its foreground colour was set:
  it didn't respect font size nor background colour then (Juan Antonio Ortega).
- Don't lose combobox text when it's opened and closed (Kolya Kosenko).
- Corrected GetChecked() for events from checkable menu items (smanders).
- Fixed popup menus under Windows NT 4.